STAC-19982: Fix review comments

--- a/spec/events.api.yaml
+++ b/spec/events.api.yaml
@@ -17,7 +17,7 @@ paths:
         "200":
           $ref: "#/components/responses/events"
         "400":
-          description: Get Events Topology Overflow Error Validation Error
+          description: "Get Events Topology: Topology Overflow Error or Validation Error"
           content:
             application/json:
               schema:
@@ -134,7 +134,7 @@ paths:
         "200":
           $ref: "#/components/responses/eventSuggestions"
         "400":
-          description: "Get events topology overflow error, validation error"
+          description: "Get Events Types: Topology Overflow Error or Validation Error"
           content:
             application/json:
               schema:
@@ -211,7 +211,7 @@ paths:
         "200":
           $ref: "#/components/responses/eventSuggestions"
         "400":
-          description: "Get events topology overflow error, validation error"
+          description: "Get Events Sources: Topology Overflow Error or Validation Error"
           content:
             application/json:
               schema:
@@ -288,7 +288,7 @@ paths:
         "200":
           $ref: "#/components/responses/eventSuggestions"
         "400":
-          description: "Get events topology overflow error, validation error"
+          description: "Get Events Tags: Topology Overflow Error or Validation Error"
           content:
             application/json:
               schema:
@@ -308,7 +308,7 @@ paths:
         "200":
           $ref: "#/components/responses/eventsHistogram"
         "400":
-          description: Get Events Histogram Topology Overflow Error or Validation Error
+          description: "Get Events Histogram: Topology Overflow Error or Validation Error"
           content:
             application/json:
               schema:
@@ -718,7 +718,7 @@ components:
     EventsHistogramRequest:
       type: object
       properties:
-        playHeadTimestampMs:
+        topologyTimestamp:
           type: integer
           format: instant
         startTimestampMs:
