--- a/spec/common.api.yaml
+++ b/spec/common.api.yaml
@@ -1,3 +1,15 @@
+paths:
+  /dummy/dummy:
+    get:
+      tags:
+        - dummy
+      #  Its not possible to make a ref unfortunately (https://github.com/OpenAPITools/openapi-generator/issues/11151)
+      summary: "Dummy path to fix omission in openapi generation when a type is not included."
+      operationId: dummy
+      description: ""
+      responses:
+        "400":
+          $ref: "#/components/responses/stackElementNotFound"
 components:
   responses:
     genericServerError:
@@ -6,7 +18,33 @@ components:
         application/json:
           schema:
             $ref: "#/components/schemas/GenericServerError"
+    stackElementNotFound:
+      description: "Error when handling an element which cannot be found."
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/StackElementNotFound"
   schemas:
+    StackElementNotFound:
+      type: object
+      discriminator:
+        propertyName: _type
+      properties:
+        _type:
+          type: string
+          enum:
+            - StackElementNotFound
+        objectType:
+          type: string
+        objectId:
+          type: string
+        message:
+          type: string
+      required:
+        - _type
+        - objectType
+        - objectId
+        - message
     GenericServerError:
       discriminator:
         propertyName: _type
@@ -23,3 +61,14 @@ components:
             - InternalServerError
       required:
         - _type
+    HealthStateValue:
+      enum:
+        - UNINITIALIZED
+        - UNKNOWN
+        - CLEAR
+        - DISABLED
+        - DEVIATING
+        - FLAPPING
+        - CRITICAL
+      type: string
+
