STAC-20142: Add canEdit and canClone

--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -341,6 +341,10 @@ components:
           type: array
           items:
             type: string
+        canEdit:
+          type: boolean
+        canClone:
+          type: boolean
         status:
           $ref: "#/components/schemas/MonitorStatusValue"
         runtimeStatus:
