--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -363,6 +363,8 @@ components:
         - status
         - runtimeStatus
         - lastUpdateTimestamp
+        - canEdit
+        - canClone
 
     MonitorFunction:
       type: object
