--- a/spec/monitors.api.yaml
+++ b/spec/monitors.api.yaml
@@ -341,6 +341,10 @@ components:
           type: array
           items:
             type: string
+        source:
+          type: string
+        sourceDetails:
+          type: string
         canEdit:
           type: boolean
         canClone:
@@ -363,6 +367,8 @@ components:
         - status
         - runtimeStatus
         - lastUpdateTimestamp
+        - source
+        - sourceDetails
         - canEdit
         - canClone
 
