--- a/spec/notification_channels.api.yaml
+++ b/spec/notification_channels.api.yaml
@@ -4,11 +4,10 @@ info:
   title: Notification Channels API
   version: "1.0.0"
 paths:
-  /notifications/{notificationConfigurationId}/channels/slack/{channelId}/oauth-redirect:
+  /notifications/channels/slack/oauth-redirect:
     get:
       parameters:
-        - $ref: "#/components/parameters/notificationConfigurationId"
-        - $ref: "#/components/parameters/channelId"
+        - $ref: "#/components/parameters/state"
       tags:
         - notification_channels
       summary: "Starts Slack OAuth2 flow"
@@ -17,11 +16,9 @@ paths:
       responses:
         "302":
           description: "Redirects to Slack to start an OAuth2 flow that will return to the slack channel configuration afterwards. In case of an error redirects back to the Slack channel configuration with an `error` and a `channelId` parameter."
-  /notifications/{notificationConfigurationId}/channels/slack/{channelId}/oauth-callback:
+  /notifications/channels/slack/oauth-callback:
     get:
       parameters:
-        - $ref: "#/components/parameters/notificationConfigurationId"
-        - $ref: "#/components/parameters/channelId"
         - $ref: "#/components/parameters/code"
         - $ref: "#/components/parameters/state"
       tags:
@@ -32,10 +29,9 @@ paths:
       responses:
         "302":
           description: "Redirects back to the Slack channel configuration, in case of an error it includes an `error` query parameter. If known also a `channelId` parameter will be included."
-  /notifications/{notificationConfigurationId}/channels/slack/{channelId}/listSlackChannels:
+  /notifications/channels/slack/{channelId}/listSlackChannels:
     get:
       parameters:
-        - $ref: "#/components/parameters/notificationConfigurationId"
         - $ref: "#/components/parameters/channelId"
       tags:
         - notification_channels
@@ -50,10 +46,9 @@ paths:
         "500":
           $ref: "#/components/responses/slackNotificationChannelError"
 
-  /notifications/{notificationConfigurationId}/channels/slack/{channelId}/joinSlackChannel:
+  /notifications/channels/slack/{channelId}/joinSlackChannel:
     post:
       parameters:
-        - $ref: "#/components/parameters/notificationConfigurationId"
         - $ref: "#/components/parameters/channelId"
       requestBody:
         $ref: "#/components/requestBodies/joinSlackChannel"
@@ -69,10 +64,9 @@ paths:
           $ref: "#/components/responses/slackNotificationChannelError"
         "500":
           $ref: "#/components/responses/slackNotificationChannelError"
-  /notifications/{notificationConfigurationId}/channels/slack/{channelId}/sendTestMessage:
+  /notifications/channels/slack/{channelId}/sendTestMessage:
     post:
       parameters:
-        - $ref: "#/components/parameters/notificationConfigurationId"
         - $ref: "#/components/parameters/channelId"
       tags:
         - notification_channels
@@ -94,12 +88,6 @@ components:
       required: true
       schema: { $ref: "#/components/schemas/channelId" }
       description: "Channel identifier"
-    notificationConfigurationId:
-      in: path
-      name: notificationConfigurationId
-      required: true
-      schema: { $ref: "#/components/schemas/notificationConfigurationId" }
-      description: "Notification identifier"
     code:
       in: query
       name: code
@@ -170,14 +158,10 @@ components:
           type: integer
         message:
           type: string
-        notificationConfigurationId:
-          type: integer
-          format: int64
         channelId: 
           type: integer
           format: int64
       required:
         - statusCode
         - message
-        - notificationConfigurationId
         - channelId
