STAC-20016 Notification test endpoint should accept json body

--- a/spec/notification_channels.api.yaml
+++ b/spec/notification_channels.api.yaml
@@ -126,6 +126,12 @@ paths:
         - $ref: "#/components/parameters/channelId"
       tags:
         - notification_channels
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              nullable: true
       summary: "Test the Slack Notification channel"
       description: "Test the Slack Notification channel by sending a test message to the configured Slack channel."
       operationId: test
